@startuml
title BlaiseConnect - Architecture MVC globale

left to right direction
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype ortho

legend left
|= Couleur |= Couche |
|<#E8F5E9>| Vue React |
|<#FFF3E0>| Contrôleur et services FastAPI |
|<#FFEBEE>| Contrats Pydantic |
|<#E3F2FD>| Modèles SQLAlchemy |
|<#ECEFF1>| Utilitaires |
endlegend

package "VUE - React" #E8F5E9 {
  class "App.jsx" as App
  class "pages/login_page.jsx" as LoginPage
  class "pages/home_page.jsx" as HomePage
  class "pages/accounts_page.jsx" as AccountsPage
  class "pages/school_years_page.jsx" as SchoolYearsPage
  class "pages/school_year_details_page.jsx" as SchoolYearDetailsPage
  class "pages/school_classes_page.jsx" as SchoolClassesPage
  class "pages/subjects_page.jsx" as SubjectsPage
  class "pages/subject_details_page.jsx" as SubjectDetailsPage
  class "pages/teachers_page.jsx" as TeachersPage
  class "pages/teacher_details_page.jsx" as TeacherDetailsPage

  class "services/auth_service.js" as FrontAuthService
  class "services/account_service.js" as FrontAccountService
  class "services/school_year_service.js" as FrontSchoolYearService
  class "services/school_classes_overview_service.js" as FrontSchoolClassService
  class "services/subject_service.js" as FrontSubjectService
  class "services/teachers_overview_service.js" as FrontTeacherService
}

package "CONTROLEUR - FastAPI" #FFF3E0 {
  class "routes/auth.py" as AuthRoutes
  class "routes/accounts.py" as AccountRoutes
  class "routes/school_years.py" as SchoolYearRoutes
  class "routes/reporting_periods.py" as ReportingPeriodRoutes
  class "routes/school_classes.py" as SchoolClassRoutes
  class "routes/subjects.py" as SubjectRoutes
  class "routes/teachers.py" as TeacherRoutes

  class "services/auth_service.py" as AuthService
  class "services/session_service.py" as SessionService
  class "services/account_service.py" as AccountService
  class "services/school_year_service.py" as SchoolYearService
  class "services/reporting_period_service.py" as ReportingPeriodService
  class "services/school_class_service.py" as SchoolClassService
  class "services/subject_service.py" as SubjectService
  class "services/teacher_service.py" as TeacherService
}

package "CONTRATS - Pydantic" #FFEBEE {
  class LoginRequest
  class LoginResponse
  class AccountCreate
  class AccountUpdate
  class AccountResponse
  class SchoolYearCreate
  class SchoolYearUpdate
  class SchoolYearDetailsUpdate
  class SchoolYearPeriodUpdate
  class SchoolYearResponse
  class SchoolYearDetailsResponse
  class SchoolYearDeletionConfirmation
  class SchoolYearDeletionPreview
  class SchoolYearDeletionResponse
  class ReportingPeriodCreate
  class ReportingPeriodUpdate
  class ReportingPeriodResponse
  class SchoolClassCreate
  class SchoolClassUpdate
  class SchoolClassResponse
  class SubjectCreate
  class SubjectUpdate
  class SubjectResponse
  class SubjectDetail
  class SubjectClassDetail
  class ClassSubjectCreate
  class ClassSubjectResponse
  class TeacherCreate
  class TeacherUpdate
  class TeacherResponse
  class TeacherOverview
  class TeacherDetail
  class TeacherAssignmentCreate
  class TeacherAssignmentEnd
  class TeacherAssignmentOption
}

package "MODELE - SQLAlchemy / PostgreSQL" #E3F2FD {
  class Account
  class AuthSession
  class SchoolYear
  class SchoolPeriod
  class SchoolClass
  class Subject
  class ClassSubject
  class Teacher
  class "teacher_assignments" as TeacherAssignment
}

package "UTILITAIRES - Core" #ECEFF1 {
  class Authentication
  class Security
  class Database
  class AccountLockedError
  class AccountAlreadyExistsError
  class SchoolYearNotFoundError
  class SchoolYearAlreadyClosedError
  class SchoolYearPeriodsMismatchError
  class ReportingPeriodNotFoundError
  class SchoolYearConfirmationMismatchError
}

App --> LoginPage
App --> HomePage
App --> AccountsPage
App --> SchoolYearsPage
App --> SchoolYearDetailsPage
App --> SchoolClassesPage
App --> SubjectsPage
App --> SubjectDetailsPage
App --> TeachersPage
App --> TeacherDetailsPage

LoginPage --> FrontAuthService
AccountsPage --> FrontAccountService
SchoolYearsPage ..> FrontSchoolYearService
SchoolYearDetailsPage --> FrontSchoolYearService
SchoolClassesPage ..> FrontSchoolClassService
SubjectsPage ..> FrontSubjectService
SubjectDetailsPage --> FrontSubjectService
TeachersPage ..> FrontTeacherService
TeacherDetailsPage --> FrontTeacherService

FrontAuthService ..> AuthRoutes : HTTP
FrontAccountService ..> AccountRoutes : HTTP
FrontSchoolYearService ..> SchoolYearRoutes : HTTP
FrontSchoolYearService ..> ReportingPeriodRoutes : HTTP
FrontSchoolClassService ..> SchoolClassRoutes : HTTP
FrontSubjectService ..> SubjectRoutes : HTTP
FrontTeacherService ..> TeacherRoutes : HTTP

AuthRoutes --> AuthService
AuthRoutes --> SessionService
AccountRoutes --> AccountService
SchoolYearRoutes ..> SchoolYearService
ReportingPeriodRoutes --> ReportingPeriodService
SchoolClassRoutes ..> SchoolClassService
SubjectRoutes ..> SubjectService
TeacherRoutes ..> TeacherService

AccountService --> Account
SessionService --> AuthSession
SchoolYearService ..> SchoolYear
SchoolYearService ..> SchoolPeriod
ReportingPeriodService --> SchoolPeriod
ReportingPeriodService --> SchoolYearService
SchoolClassService ..> SchoolClass
SubjectService ..> Subject
SubjectService ..> ClassSubject
TeacherService ..> Teacher
TeacherService ..> TeacherAssignment

SchoolYear "1" -- "0..*" SchoolPeriod
SchoolYear "1" -- "0..*" SchoolClass
SchoolClass "1" -- "0..*" ClassSubject
Subject "1" -- "0..*" ClassSubject
Account "1" -- "0..1" Teacher
Teacher "1" -- "0..*" TeacherAssignment
ClassSubject "1" -- "0..*" TeacherAssignment

Authentication --> SessionService
Authentication --> Account
AuthService --> Security
Database ..> Account

note bottom of SchoolPeriod
L'administrateur choisit la date de fin.
Le début est calculé automatiquement.
Une année active peut encore ne contenir aucune période.
Décisions D-004 et D-005 validées.
end note

note bottom of ClassSubject
Coefficient positif configuré par l'administrateur.
Décision D-016 validée ; arrondi encore à confirmer.
end note

note bottom of TeacherAssignment
Relie un enseignant à une matière déjà associée à une classe.
La désaffectation renseigne end_date et conserve l'historique.
Deux affectations d'une même matière de classe ne se chevauchent pas.
end note

@enduml
